--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -11,6 +11,7 @@
 
 .loginbox
 {
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -23,7 +24,7 @@
     height: 440px;
  
     /* background-color: rgba(253, 253, 253, 0.1); */
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255,1);
     backdrop-filter: blur(100px);
     border-radius: 20px;
    
@@ -31,29 +32,12 @@
 
 .loginimage
 {
-       width: 440px;
+       width: 350px;
        height: 350px;
+       align-self: center;
 }
 
-.googlebuttonflex
+.googletext
 {
-  
-    display: flex;
-    flex-direction: row;
-   
-    height: 50px;
-    width: 200px;
-    border-radius: 10px;
-    align-self: center;
-
+    text-align: center;
 }
-
-.googlelogo
-{
-    width: 50px;
-}
-
-.googlebuttonflex{
-    cursor: pointer;
-}
-
