--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -24,7 +24,7 @@
     height: 440px;
  
     /* background-color: rgba(253, 253, 253, 0.1); */
-    background-color: rgba(255, 255, 255,1);
+    background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(100px);
     border-radius: 20px;
    
