after adding modal and form validation

--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -41,3 +41,13 @@
 {
     text-align: center;
 }
+
+.logincolor
+{
+    color: rgb(157,189,181);
+}
+
+.logoutcolor
+{
+    color:rgb(255, 94, 94)
+}
